# Quark2

./: CMakeLists.txt  README.md
src/main/: audio._cpp  audio.cpp  audio.h  engine.cpp  engine.h  entity.cpp  entity.h  entitymanagement.cpp  entitymanagement.h  main.cpp  vdeleter.h  vulkan.cpp  vulkan.h
src/main/base/allocators/: allocator.h  lineallocator.cpp  linearallocator.cpp  linearallocator.h
src/main/base/comp/: gameobject.cpp  gameobject.h  icomponent.cpp  icomponent.h  transformation.cpp  transformation.h
src/main/base/comp/management/: componentmanagement.cpp  componentmanagement.h  entitymanagement.cpp  entitymanagement.h  resourcemanagement.cpp  resourcemanagement.h
src/main/base/comp/management/resourceloader/: modelloader.h
src/main/base/comp/scripting/: script.cpp  script.h
src/main/base/datastructures/: componentmanagement.cpp  componentmanagement.h  entity.h  entitymanagement.cpp  entitymanagement.h
src/main/base/datastructures/components/: component.cpp  component.h  gameobject.cpp  gameobject.h  geometry.cpp  geometry.h  material.cpp  material.h  pyscriptinstance.cpp  pyscriptinstance.h  renderer.cpp  renderer.h  script.cpp  script.h  scriptinstance.cpp  scriptinstance.h  shader.cpp  shader.h  texture.cpp  texture.h  transformation.cpp  transformation.h
src/main/base/datastructures/management/: componentmanagement.cpp  componentmanagement.h  entity.cpp  entitymanagement.cpp  entitymanagement.h  resourcemanagement.cpp  resourcemanagement.h
src/main/base/datastructures/management/resourceloader/: modelloader.cpp  modelloader.h
src/main/base/gfx/components/: igeometry.cpp  igeometry.h  igeometryrenderer.cpp  igeometryrenderer.h  imaterial.cpp  imaterial.h  irenderer.cpp  irenderer.h  ishader.cpp  ishader.h  itexture.cpp  itexture.h
src/main/base/gfx/vulkan/: vulkan.cpp  vulkan.h
src/main/base/gfx/vulkan/components/: geometry.cpp  geometry.h  geometryrenderer.cpp  geometryrenderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/main/base/mem/: memmanagement.h
src/main/base/mem/allocator/: poolloc.cpp  poolloc.h
src/main/base/systems/: isystem.cpp  isystem.h  rendersystem.cpp  rendersystem.h  scriptsystem.cpp  scriptsystem.h  system.cpp  system.h
src/main/base/vulkan/: vulkan.cpp  vulkan.h
src/resources/scripts/: script.py  script1.py  script2.py
src/resources/shader/test/: compile_linux.sh  shader.frag
